--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,8 +59,8 @@ members = ["build"]
 [package.metadata.packager]
 identifier = "net.burningtnt.terracotta"
 out-dir = "target/terracotta"
-icons = ["build/icons/*"]
 category = "Game"
+icons = ["build/linux/icons/*"]
 
 [package.metadata.packager.appimage.files]
 "build/linux/terracotta.desktop" = "usr/share/applications/terracotta.desktop"
