--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -133,7 +133,10 @@ jobs:
         fi
         mv -v artifacts/$(ls artifacts | grep "linux-aarch64-gnu") target/aarch64-unknown-linux-gnu/release/terracotta
         cargo +nightly packager --release -f appimage --target aarch64-unknown-linux-gnu
-        zip -q - target/terracotta/$(ls target/terracotta | grep "_aarch64.AppImage") | gh-actions-artifact-client.js upload $(ls target/terracotta | grep "_aarch64.AppImage")
+        {
+          cd target/terracotta
+          zip -q - $(ls | grep "_aarch64.AppImage") | gh-actions-artifact-client.js upload $(ls | grep "_aarch64.AppImage")
+        }
 
   assemble-dmg:
     name: Assemble DMG
