--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -132,10 +132,10 @@ jobs:
           TEMP_DIR=$(mktemp -d)
           mkdir -p "$TEMP_DIR/Applications"
           cp -R build/macos/terracotta.app "$TEMP_DIR/Applications"
-          mkdir "$TEMP_DIR/terracotta.app/Contents/MacOS/"
+          mkdir "$TEMP_DIR/Applications/terracotta.app/Contents/MacOS/"
           gh-actions-artifact-client.js download "terracotta-${TERRACOTTA_VERSION}-macos-${classifier}.tar" \
             | gtar -xOJf - \
-            >> "$TEMP_DIR/terracotta.app/Contents/MacOS/terracotta"
+            >> "$TEMP_DIR/Applications/terracotta.app/Contents/MacOS/terracotta"
         
           chmod -R 755 "$TEMP_DIR/"
           PKG_OUTPUT=$(mktemp)
