Feature: Build Linux AppImage.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -147,3 +147,28 @@ jobs:
             "$PKG_OUTPUT"
           cat $PKG_OUTPUT | gh-actions-artifact-client.js upload "terracotta-${TERRACOTTA_VERSION}-macos-${classifier}.pkg"
         done
+  assemble-app-image:
+    name: Assemble App Image
+    runs-on: ubuntu-latest
+    needs: build-executable
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install Artifact Handle
+        uses: lhotari/gh-actions-artifact-client@v2
+      - name: Install Linux Deploy
+        run: |
+          wget -O linux-deploy.AppImage https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage
+          chmod +x linux-deploy.AppImage
+      - name: Build App Image
+        run: |
+          artifact=$(mktemp -d)
+          gh-actions-artifact-client.js download "terracotta-${TERRACOTTA_VERSION}-linux-x86_64.tar" \
+            | gtar -xOJf - \
+            >> "$artifact"
+          
+          output="terracotta-${TERRACOTTA_VERSION}-linux-x86_64.AppImage"
+          linux-deploy.AppImage -e "$artifact" -d build/linux/terracotta.desktop -i build/linux/terracotta.png --output "$output"
+          zip -q - "$output" \
+            | gh-actions-artifact-client.js upload "$output"
+          
