--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -136,7 +136,8 @@ jobs:
           mkdir -p "$TEMP_DIR/Applications"
           cp -R build/macos/terracotta.app "$TEMP_DIR/Applications"
           mkdir "$TEMP_DIR/Applications/terracotta.app/Contents/MacOS/"
-          gh-actions-artifact-client.js download "terracotta-${TERRACOTTA_VERSION}-macos-${classifier}.tar" \
+          gh-actions-artifact-client.js download "terracotta-${TERRACOTTA_VERSION}-macos-${classifier}.tar.zip"
+          unzip -p "terracotta-${TERRACOTTA_VERSION}-macos-${classifier}.tar.zip"
             | gtar -xOJf - \
             >> "$TEMP_DIR/Applications/terracotta.app/Contents/MacOS/terracotta"
         
