--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -136,7 +136,7 @@ jobs:
           mkdir -p "$TEMP_DIR/Applications"
           cp -R build/macos/terracotta.app "$TEMP_DIR/Applications"
           mkdir "$TEMP_DIR/Applications/terracotta.app/Contents/MacOS/"
-          gh-actions-artifact-client.js download "terracotta-${TERRACOTTA_VERSION}-macos-${classifier}.tar.zip"
+          gh-actions-artifact-client.js download "terracotta-${TERRACOTTA_VERSION}-macos-${classifier}.tar" >> "terracotta-${TERRACOTTA_VERSION}-macos-${classifier}.tar.zip"
           unzip -p "terracotta-${TERRACOTTA_VERSION}-macos-${classifier}.tar.zip" \
             | gtar -xOJf - \
             >> "$TEMP_DIR/Applications/terracotta.app/Contents/MacOS/terracotta"
@@ -185,7 +185,8 @@ jobs:
           classifier="arm64"
         fi
 
-        gh-actions-artifact-client.js download "terracotta-${TERRACOTTA_VERSION}-linux-${classifier}.tar" \
+        gh-actions-artifact-client.js download "terracotta-${TERRACOTTA_VERSION}-linux-${classifier}.tar" >> "terracotta-${TERRACOTTA_VERSION}-linux-${classifier}.tar.zip"
+        unzip -p "terracotta-${TERRACOTTA_VERSION}-linux-${classifier}.tar.zip" \
           | tar -xOJf - \
           >> "$artifact"
         
