--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -188,9 +188,13 @@ jobs:
         gh-actions-artifact-client.js download "terracotta-${TERRACOTTA_VERSION}-linux-${classifier}.tar" >> "terracotta-${TERRACOTTA_VERSION}-linux-${classifier}.tar.zip"
         unzip -p "terracotta-${TERRACOTTA_VERSION}-linux-${classifier}.tar.zip" \
           | tar -xOJf - \
-          >> "$artifact"
+          > "$artifact/terracotta"
         
-        ./linux-deploy.AppImage --appdir=./temp --desktop-file=build/linux/terracotta.desktop --icon-file=build/linux/icon.png -e "$artifact" --output=appimage
+        ./linux-deploy.AppImage --appdir=./temp \
+          --desktop-file=build/linux/terracotta.desktop \
+          --icon-file=build/linux/icon.png \
+          -e "$artifact" \
+          --output=appimage
         appimage=(Terracotta-*.AppImage)
         source="terracotta-${TERRACOTTA_VERSION}-linux-${classifier}"
         target="${source}.tar"
