--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -96,7 +96,9 @@ jobs:
         win_artifacts["aarch64-pc-windows-gnullvm/release/terracotta.exe"]="terracotta-${TERRACOTTA_VERSION}-windows-arm64.exe"
 
         for artifact in "${!win_artifacts[@]}"; do
-          zip -q - "target/$artifact" | gh-actions-artifact-client.js upload "${win_artifacts[$artifact]}"
+          source="${win_artifacts[$artifact]}"
+          cp "target/$artifact" "$source"
+          zip -q - "$source" | gh-actions-artifact-client.js upload "$source.zip"
         done
         
         declare -A unix_artifacts
@@ -112,7 +114,10 @@ jobs:
 
           target="${source}.tar"
           tar -cJf "$target" "$source"
-          zip -q - "$target" | gh-actions-artifact-client.js upload "$target"
+          zip -q - "$target" | gh-actions-artifact-client.js upload "$target.zip"
+
+          cat "$source" | gh-actions-artifact-client.js upload "executable-$source"
+          cat "$target" | gh-actions-artifact-client.js upload "tar-$source"
         done
 
         echo "version=${TERRACOTTA_VERSION}" >> $GITHUB_OUTPUT
@@ -149,7 +154,7 @@ jobs:
             --version "1.0" \
             --install-location "/" \
             "$PKG_OUTPUT"
-          cat $PKG_OUTPUT | gh-actions-artifact-client.js upload "terracotta-${TERRACOTTA_VERSION}-macos-${classifier}.pkg"
+          zip -q - $PKG_OUTPUT | gh-actions-artifact-client.js upload "terracotta-${TERRACOTTA_VERSION}-macos-${classifier}.pkg.zip"
         done
   assemble-app-image:
     strategy:
@@ -205,7 +210,7 @@ jobs:
         
         tar -cJf "$target" "$source"
         zip -q - "$target"
-          | gh-actions-artifact-client.js upload "$target"
+          | gh-actions-artifact-client.js upload "$target.zip"
       env:
         IS_ARM: ${{ contains(runner.arch, 'ARM') }}
         TERRACOTTA_VERSION: ${{needs.build-executable.outputs.version}}
